@@ -105,7 +105,7 @@ class RampGenerator {
   }
   void applySpeedAcceleration();
   int8_t move(int32_t move, const struct queue_end_s *queue);
-  int8_t moveTo(int32_t position);
+  int8_t moveTo(int32_t position, const struct queue_end_s *queue);
   int8_t startRun(bool countUp);
   inline void initiate_stop() { _ro.force_stop = true; }
   inline bool isStopping() { return _ro.force_stop && isRampGeneratorActive(); }
@@ -125,7 +125,7 @@ class RampGenerator {
   }
 
  private:
-  int8_t _startMove(int32_t target_pos);
+  int8_t _startMove(int32_t target_pos, int32_t current_target_pos);
 #if (TICKS_PER_S != 16000000L)
   upm_float upm_timer_freq;
 #endif
