@@ -8,6 +8,7 @@ pre-0.19.0:
 	- setSpeed/setAcceleration =>x report invalid data error
 	- motor info with speed/acceleration
 	- less verbose: if any motor is running, only info for running motor
+- fix issue #43: Issue on moveTo() to exactly same target after a completion of stopMove()
 
 
 0.18.13:
